--- a/rbtree_lab/src/Makefile
+++ b/rbtree_lab/src/Makefile
@@ -1,8 +1,11 @@
 .PHONY: clean
 
-CFLAGS=-Wall -g
+CFLAGS=-Wall -g -DSENTINEL
 
 driver: driver.o rbtree.o
+
+rbtree.o: rbtree.c rbtree.h
+	$(CC) $(CFLAGS) -c rbtree.c -o rbtree.o
 
 clean:
 	rm -f driver *.o
